--- a/newsapp/src/main/res/layout/article_fragment.xml
+++ b/newsapp/src/main/res/layout/article_fragment.xml
@@ -41,12 +41,14 @@
 
     <TextView
         android:id="@+id/article_description"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="33dp"
         android:layout_marginTop="28dp"
+        android:layout_marginEnd="33dp"
         android:text="TextView"
-        android:textSize="30sp"
+        android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
